--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,9 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-  
-    - name: make
-      run: make
+    - name: configure
+      run: ./configure
+
     - name: make check
       run: make check
     - name: make distcheck
