Cajero Automatico Basic

--- a/Condicional - Switch/Condicional - Switch/Condicional - Switch.vcxproj.filters
+++ b/Condicional - Switch/Condicional - Switch/Condicional - Switch.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Switch.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Switch - Practica.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
