--- a/Condicional - Switch/Condicional - Switch/Condicional - Switch.vcxproj
+++ b/Condicional - Switch/Condicional - Switch/Condicional - Switch.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Switch - Practica.cpp" />
     <ClCompile Include="Switch.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
