--- a/Arreglos/Arreglos/Arreglos.vcxproj.filters
+++ b/Arreglos/Arreglos/Arreglos.vcxproj.filters
@@ -14,4 +14,23 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Arreglos.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\..\Downloads\array.png">
+      <Filter>Archivos de recursos</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\..\Downloads\array1.png">
+      <Filter>Archivos de recursos</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\..\Downloads\array_numeros.PNG">
+      <Filter>Archivos de recursos</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\..\Downloads\Array_letra.PNG">
+      <Filter>Archivos de recursos</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
