--- a/Matrices/Matrices/Matrices.vcxproj
+++ b/Matrices/Matrices/Matrices.vcxproj
@@ -141,6 +141,10 @@
   <ItemGroup>
     <ClCompile Include="Matrices.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\..\Downloads\matriz.PNG" />
+    <Image Include="..\..\..\..\..\..\Downloads\matriz2.PNG" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
