Ordenamiento Burbuja Update

--- a/Ordenamientos  - Método Burbuja/Ordenamientos  - Método Burbuja.vcxproj
+++ b/Ordenamientos  - Método Burbuja/Ordenamientos  - Método Burbuja.vcxproj
@@ -141,6 +141,14 @@
   <ItemGroup>
     <ClCompile Include="Burbuja.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\Documents\burbuja.png" />
+    <Image Include="..\..\..\..\..\Documents\burbuja2.png" />
+    <Image Include="..\..\..\..\..\Documents\burbuja3.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
