--- a/Funciones II - una clase con una funcion miembro/Funciones II - una clase con una funcion miembro.vcxproj
+++ b/Funciones II - una clase con una funcion miembro/Funciones II - una clase con una funcion miembro.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{a089bd4d-efbf-444f-9bdc-b1c37778aa6f}</ProjectGuid>
     <RootNamespace>FuncionesIIunaclaseconunafuncionmiembro</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Funciones II - definicion de una funcion miembro con parametro</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
