--- a/PublicPrivateProtected/PublicPrivateProtected.vcxproj
+++ b/PublicPrivateProtected/PublicPrivateProtected.vcxproj
@@ -141,6 +141,12 @@
   <ItemGroup>
     <ClCompile Include="public.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="PublicHeader.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
