--- a/PublicPrivateProtected/PublicPrivateProtected.vcxproj.filters
+++ b/PublicPrivateProtected/PublicPrivateProtected.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="PublicHeader.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
