--- a/Funciones2 - Plantillas de Funcion/Funciones2 - Plantillas de Funcion.vcxproj
+++ b/Funciones2 - Plantillas de Funcion/Funciones2 - Plantillas de Funcion.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="Funciones2.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
